<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="142dp"
            android:layout_height="128dp"
            android:background="#00ffffff"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.457"
            app:srcCompat="@drawable/ic_launcher_foreground" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="219dp"
        android:layout_weight="4"
        android:gravity="center"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/fluentui_tab_content_start">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPass"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:layout_marginHorizontal="@dimen/fluentui_tab_content_start"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="104dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="153dp"
            android:layout_height="42dp"
            android:layout_marginTop="16dp"
            android:onClick="signIn"
            android:shadowRadius="5"
            android:text="@string/masuk"
            android:textColor="@color/fluentui_white"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/btnRegister"
            app:layout_constraintHorizontal_bias="0.551"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="150dp"
            android:layout_height="42dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:onClick="register"
            android:shadowRadius="5"
            android:text="@string/daftar"
            android:textColor="@color/fluentui_white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.93"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>